<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ValveCoils" Id="{96f8df50-b0d0-0d33-22b0-068fd50d66ac}">
    <Declaration><![CDATA[TYPE ST_ValveCoils :
STRUCT
	Coils_01_To_08	: BYTE;
	Coils_09_To_16	: BYTE;
	Coils_17_To_24	: BYTE;
	Coils_25_To_32	: BYTE;
	Coils_33_To_40	: BYTE;
	Coils_41_To_48	: BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>